--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Made to yank images right out of ED's wiki",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "keywords": [
     "Proxy"
